[package]
name = "ios"
version = "0.1.0"
edition = "2021"


[lib]
name = "wcgcore"
crate-type = ["cdylib", "staticlib"]


[dependencies]
ada-url = {git = "https://github.com/triniwiz/ada-url-rust" , rev = "bc35ae9"}
encoding_rs = "0.8.33"
bytes = "1.5.0"
base64 = "0.21.5"
rand = "0.8.5"
uuid = {version = "1.6.1", features = ["v4"]}